syntax = "proto3";

package event_service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "./eventsservice;eventsservice";


service Calendar
{
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {}
}

message Event {
  string title = 1;
  string description = 2;
  string user_id = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Duration duration = 5;
  google.protobuf.Duration notify_before = 6;
  string id = 7;
  bool notified = 8;
}

message CreateEventRequest {
  message NewEvent {
    string title = 1;
    string description = 2;
    string user_id = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Duration duration = 5;
    google.protobuf.Duration notify_before = 6;
  }

  NewEvent event = 1;
}

message CreateEventResponse {
  Event event = 1;
}

message UpdateEventRequest {
  Event event = 1;
}

message UpdateEventResponse {
  Event event = 1;
}